# aoc_ocaml

./: a.out  dune-project  hello.opam  hello.opam.template
_build/: .db  .digest-db  log  sanitize.sh
_build/default/: hello.dune-package
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: hello.cma  hello.cmxa  hello.cmxs
_build/default/lib/.hello.objs/byte/: hello.cmi  hello.cmo  hello.cmt
_build/default/lib/.hello.objs/native/: hello.cmx
_build/default/lib/.merlin-conf/: lib-hello
_build/default/test/.merlin-conf/: exe-test_hello
_build/default/test/.test_hello.eobjs/byte/: dune__exe__Test_hello.cmi  dune__exe__Test_hello.cmti
_build/default/test/.test_hello.eobjs/native/: dune__exe__Test_hello.cmx
_build/install/default/lib/hello/: META  dune-package  opam
data/: advent_10_data_test_2.txt  advent_12_data.txt  advent_12_data_rest.txt  advent_12_data_test.txt  advent_13_data_test.txt
